--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <img src="image.jpg" alt="示例图片">
     <a href="https://www.example.com">访问示例网站</a>
     <ul>
-        <li>今天有没有好好陪我聊天?</li>
-        <li>今天有没有逗我开心?</li>
+        <li>1、今天有没有好好陪我聊天?</li>
+        <li>2、每次聊天问我都是今天过得怎么样。</li>
+        <li>3、每次聊天问我都是好看的电影，好吃的美食。</li>
+        <li>4、每次聊天问我条，不是天气就是电影和美食。</li>
     </ul>
 </body>
 </html>
