具体日程开始
规划诉讼

--- a/tool/Schedule.html
+++ b/tool/Schedule.html
@@ -849,83 +849,43 @@
         let scheduleEvents = [
             {
                 id: 1,
-                title: "移动端适配由DeepSeek优化",
+                title: "录视频",
                 date: "2025-06-14",
                 type: "daily",
-                desc: "2025-6-14_1517",
+                desc: "给家属录音录像",
                 priority: "重要"
             },
             {
                 id: 2,
-                title: "月度同事聚餐",
-                date: "2025-07-01",
+                title: "准备给一审二审档案室再次走访的准备",
+                date: "2025-06-15",
                 type: "social",
-                desc: "准备礼品、话题",
+                desc: "正式",
                 priority: "紧急"
             },
             {
                 id: 3,
-                title: "交话费",
-                date: "2025-06-28",
+                title: "去一审二审法院档案室",
+                date: "2025-06-16",
                 type: "bill",
-                desc: "通过手机银行转账，注意余额充足，避免停机影响正常生活",
+                desc: "一定让他们正式回复",
                 priority: "重要"
             },
             {
                 id: 4,
-                title: "定高铁票去看父母",
-                date: "2025-07-20",
+                title: "通过国家信访局信访公安机关",
+                date: "2025-06-17",
                 type: "traffic",
-                desc: "准备身份证，提前预定车票，注意选择合适的时间段",
+                desc: "务必让对方出具正式文据",
                 priority: "普通"
             },
             {
                 id: 5,
-                title: "购物充分给父母所在地领居",
-                date: "2025-06-16",
-                type: "other",
-                desc: "准备充分的礼物，免得村里人说闲话",
-                priority: "紧急"
-            },
-            {
-                id: 6,
-                title: "物业费缴纳",
+                title: "申诉",
                 date: "2025-06-30",
-                type: "bill",
-                desc: "5月物业费逾期未缴，物业已发送催缴通知，需立即处理",
-                priority: "重要"
-            },
-            {
-                id: 7,
-                title: "朋友婚礼",
-                date: "2025-06-25",
-                type: "daily",
-                desc: "准备红包，穿正式服装，提前半小时到达酒店",
-                priority: "重要"
-            },
-            {
-                id: 8,
-                title: "孩子钢琴考级报名（已逾期）",
-                date: "2025-06-18",
                 type: "other",
-                desc: "报名截止日期6月10日，逾期未报名需等待下一批次",
-                priority: "紧急"
-            },
-            {
-                id: 9,
-                title: "健身房会员续费",
-                date: "2025-06-28",
-                type: "bill",
-                desc: "本月续费可享受8折优惠，联系教练办理",
-                priority: "普通"
-            },
-            {
-                id: 10,
-                title: "大学同学毕业10周年聚会",
-                date: "2025-08-05",
-                type: "other",
-                desc: "提前统计参加人数，预订聚会场地，准备纪念礼物",
-                priority: "重要"
+                desc: "待定",
+                priority: "申诉"
             }
         ];
 
