--- a/tool/Schedule.html
+++ b/tool/Schedule.html
@@ -850,8 +850,8 @@
             {
                 id: 1,
                 title: "录视频",
-                date: "2025-06-14",
-                type: "daily",
+                date: "2025-06-15",
+                type: "other",
                 desc: "给家属录音录像",
                 priority: "重要"
             },
@@ -859,7 +859,7 @@
                 id: 2,
                 title: "准备给一审二审档案室再次走访的准备",
                 date: "2025-06-15",
-                type: "social",
+                type: "other",
                 desc: "正式",
                 priority: "紧急"
             },
@@ -867,7 +867,7 @@
                 id: 3,
                 title: "去一审二审法院档案室",
                 date: "2025-06-16",
-                type: "bill",
+                type: "other",
                 desc: "一定让他们正式回复",
                 priority: "重要"
             },
@@ -875,7 +875,7 @@
                 id: 4,
                 title: "通过国家信访局信访公安机关",
                 date: "2025-06-17",
-                type: "traffic",
+                type: "other",
                 desc: "务必让对方出具正式文据",
                 priority: "普通"
             },
@@ -1412,7 +1412,7 @@
             };
             return map[name] || "other";
         }
-        
+              
         // 移动端文字优化
         function adjustTextForMobile() {
             if (window.innerWidth <= 480) {
