--- a/tool/daily board.html
+++ b/tool/daily board.html
@@ -655,15 +655,15 @@
             {
                 id: 1,
                 title: "给家属录像",
-                date: getTodayTime("07:00"),
-                type: "health",
+                date: getTodayTime("14:00"),
+                type: "work",
                 desc: "确认通知书未实际送达家属。",
                 priority: "重要"
             },
             {
                 id: 2,
                 title: "准备正式回应材料",
-                date: getTodayTime("09:30"),
+                date: getTodayTime("15:00"),
                 type: "work",
                 desc: "梳理证据和法条",
                 priority: "紧急"
@@ -671,26 +671,26 @@
             {
                 id: 3,
                 title: "准备一审查卷事宜",
-                date: getTodayTime("12:00"),
-                type: "study",
+                date: getTodayTime("16:00"),
+                type: "work",
                 desc: "背诵50个新单词，复习昨天内容。",
-                priority: "普通"
+                priority: "紧急"
             },
             {
                 id: 4,
                 title: "梳理一审正卷缺失的证据和法条",
-                date: getTodayTime("13:00"),
-                type: "life",
+                date: getTodayTime("17:00"),
+                type: "work",
                 desc: "午餐后休息30分钟，保持精力充沛。",
-                priority: "普通"
+                priority: "紧急"
             },
             {
                 id: 5,
                 title: "梳理二审的证据和法条",
                 date: getTodayTime("17:30"),
-                type: "life",
+                type: "work",
                 desc: "下班后去超市采购晚餐食材。",
-                priority: "重要"
+                priority: "紧急"
             }
         ];
 
