--- a/tool/daily board.html
+++ b/tool/daily board.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?cdb5986d020867029ac6d18ec764b4f4";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -604,7 +613,7 @@
             <div class="location">你所在位置：主页 &gt; 每日任务看板</div>
         </div>
         <div style="display: flex; align-items: center; gap: 10px;">
-            <button class="home-btn" id="homeBtn">
+            <button class="home-btn" id="homeBtn" onclick="window.location.href='https://myphone108.github.io'">
                 <i class="fas fa-home"></i> 返回主页
             </button>
             <button id="themeToggleBtn" class="home-btn" title="切换主题" style="padding: 8px 10px;">
