解决页面不能被统计问题和返回主页按钮不灵问题
解决页面不能被统计问题和返回主页按钮不灵问题

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<script>
+    <script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
@@ -9,6 +9,7 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -545,10 +546,10 @@ var _hmt = _hmt || [];
             <div class="location">你所在位置：主页</div>
         </div>
         <div class="header-right">
-            <button class="home-btn" id="dailyBoardBtn" onclick="window.location.href='https://myphone108.github.io/tool/daily board.html'">
+            <button class="home-btn" id="dailyBoardBtn" onclick="window.location.href='https://myphone108.github.io/tool/daily%20board.html'">
             <i class="fas fa-table"></i> <span>Daily Board</span>
             </button>
-            <button class="home-btn" id="scheduleBtn" onclick="window.location.href='https://myphone108.github.io/tool/Schedule.htm'">
+            <button class="home-btn" id="scheduleBtn" onclick="window.location.href='https://myphone108.github.io/tool/Schedule.html'">
             <i class="fas fa-calendar-alt"></i> <span>Schedule</span>
             </button>
             <button id="themeToggle" class="home-btn">
