--- a/tool/Schedule.html
+++ b/tool/Schedule.html
@@ -13,7 +13,7 @@ var _hmt = _hmt || [];
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>生活日程看板</title>
+    <title>日程看板</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
