解决晕倒冗余字符问题
解决晕倒冗余字符问题

--- a/tool/daily board.html
+++ b/tool/daily board.html
@@ -664,7 +664,7 @@ var _hmt = _hmt || [];
     
     <!-- 页脚 -->
     <footer>
-        2025 TPZMN@天平啄木鸟版权所有 | 数据已同步至云端服务器
+        2025 TPZMN@天平啄木鸟版权所有
     </footer>
 
     <!-- 添加/编辑任务的模态框 -->
