--- a/StudyNotes/git命令使用.html
+++ b/StudyNotes/git命令使用.html
@@ -439,7 +439,7 @@
                     <tr>
                         <td><span class="command">git log</span></td>
                         <td>查看提交历史（含时间、作者、备注）</td>
-                        <td><div class="example">git log<br>git log --oneline</div><div class="note">（简洁模式）</div></td>
+                        <td><div class="example">git log<br>git log --oneline</div><div class="note"></div></td>
                     </tr>
                     <tr>
                         <td><span class="command">git log -p &lt;文件路径&gt;</span></td>
