--- a/index.html
+++ b/index.html
@@ -552,6 +552,9 @@ var _hmt = _hmt || [];
             <button class="home-btn" id="scheduleBtn" onclick="window.location.href='https://myphone108.github.io/tool/Schedule.html'">
             <i class="fas fa-calendar-alt"></i> <span>Schedule</span>
             </button>
+            <button class="home-btn" id="scheduleBtn" onclick="window.location.href='https://myphone108.github.io/StudyNotes/git%E5%91%BD%E4%BB%A4%E4%BD%BF%E7%94%A8.html'">
+            <i class="fas fa-calendar-alt"></i> <span>Git命令学习手册</span>
+            </button>
             <button id="themeToggle" class="home-btn">
             <i class="fas fa-moon"></i> <span class="theme-text">夜间模式</span>
             </button>
