--- a/StudyNotes/git命令使用.html
+++ b/StudyNotes/git命令使用.html
@@ -351,7 +351,7 @@
 </head>
 <body>
     <!-- 页头 -->
-    <header>
+    <header style="position:fixed;top:0;left:50%;transform:translateX(-50%);z-index:1000;width:100%;max-width:1200px;">
         <div class="header-left">
             <div class="timestamp" id="timestamp">2025年6月15日 00:00:00</div>
             <div class="location">你所在位置：Git命令学习手册</div>
