--- a/StudyNotes/git命令使用.html
+++ b/StudyNotes/git命令使用.html
@@ -677,7 +677,7 @@
     <!-- 页脚 -->
     <footer>
       <div class="footer-content">
-        &copy; 2025 myphone108.github.io | 生活日程管理与学习笔记平台
+        &copy; 2025 myphone108.github.io
       </div>
     </footer>
     
